# controlit_dreamer_integration

./: CMakeLists.txt  README.md  controlit_dreamer_plugins.xml  mainpage.dox  manifest.xml  package.xml
conf/: rosconsole.conf
config/: rosconsole.config
include/controlit/dreamer/: HandControllerDreamer.hpp  HeadControllerDreamer.hpp  OdometryStateReceiverDreamer.hpp  RobotInterfaceDreamer.hpp  RobotInterfaceDreamerTester.hpp  ServoClockDreamer.hpp  ServoClockDreamerTester.hpp  TimerRTAI.hpp
include/controlit/servo_clock_library/: ServoClockDreamer.hpp  ServoClockDreamerTester.hpp
launch/: LoadRobotDescription.launch  TestDreamerRobotInterface.launch  TestDreamerServo.launch  dreamer_param_base.xml  load_dreamer_parameters_cartpos.launch  load_dreamer_parameters_cartpos_bothhands.launch  load_dreamer_parameters_cartpos_bothhands_6dof.launch  load_dreamer_parameters_cartpos_righthand.launch  load_dreamer_parameters_jpos.launch  load_dreamer_parameters_trajectory_capture.launch  run_cartpos.launch  run_cartpos_bothhands.launch  run_cartpos_bothhands_6dof.launch  run_cartpos_righthand.launch  run_jpos.launch  run_trajectory_capture.launch  start_controlit.launch  test_robot_interface_dreamer.launch
models/xacro/: controlit_dreamer.xacro
nodes/: ConvertCartesianErrorToErrorNorm.py  Demo10_SaltShake.py  Demo11_Microwave.py  Demo12_Test_6DOF_Trajectory_1.py  Demo13_GraspBox.py  Demo1_ProductDisassembly.py  Demo1_ProductDisassembly_CartesianBased.py  Demo1_ProductDisassembly_CartesianBased_NewLoc.py  Demo1_ProductDisassembly_PostureBased.py  Demo2_ChangingObjectPositions.py  Demo3_AutomatedChangingObjectPositions.py  Demo4_HandWave.py  Demo4_HandWave_TrajViz.py  Demo5_HandShake.py  Demo6_PeggyGraspTrajectory.py  Demo7_EERC_Groundbreaking_Ceremony.py  Demo7_HookemHorns.py  Demo8_EERC_Groundbreaking_Ceremony.py  Demo9_CARL_Telemanipulation.py  DreamerInterface.py  HandFlap.py  HandTap.py  HeadJointTester.py  HelloWorld.py  JointPositionErrorDisplayer.py  LeftGripperPowerGraspControl.py  NeckJointTest.py  RightHandPowerGraspControl.py  TakeSnapshot.py  TestSMACHFSM.py  Trajectory.py  TrajectoryGeneratorCubicSpline.py  TrajectoryVisualizer.py
parameters/: CartesianPositionControl.yaml  CartesianPositionControl_BothHands.yaml  CartesianPositionControl_BothHands_6dof.yaml  CartesianPositionControl_RightHand.yaml  JointPositionControl.yaml  JointPositionControlWithSensing.yaml  Sensors.yaml
plugins/: controlit_dreamer_plugins.xml
src/: DreamerInteractiveMarkers.cpp  HandControllerDreamer.cpp  HeadControllerDreamer.cpp  OdometryStateReceiverDreamer.cpp  PluginList.cpp  RobotInterfaceDreamer.cpp  RobotInterfaceDreamerTester.cpp  ServoClockDreamer.cpp  ServoClockDreamerTester.cpp  TimerRTAI.cpp
